# desafio-verify

./: README.md  docker-compose.yml  gerar_db.py  gerar_imagens.py  pyproject.toml  sandbox.py
api/: Dockerfile  main.py
mcp-ocr/: Dockerfile  main.py
mcp-rag/: Dockerfile  main.py  mock_db.json
security/: guardrail.py
transpiler/: agente_config.json  agente_gerado.py  main.py
